--- a/style.css
+++ b/style.css
@@ -3,8 +3,19 @@ html, body {
     margin: 0px;
 }
 
+#topDiv {
+    height: 2%;
+    text-align: center;
+    backgroud: #3D3D3D
+}
+
+#topA {
+    backgroud: #3D3D3D;
+    color: lightgray;
+}
+
 .flex-container{
-    height: 100%;
+    height: 98%;
     display: flex;
 }
 
